--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             position: relative;
         }
 
+        .poster {
+            position: relative;
+        }
+
     </style>
 
 </head>
@@ -46,10 +50,34 @@
                 <button type="submit" class="btn-2"><a href="#">Log in</a></button>
 
             </form>
-
-            
         </div>
     </header>
-</body>
 
+
+
+    <section class="mid-1">
+
+        <div class="poster">
+            <img src="image/CodingNest-Poster.PNG" alt="CodingNest-Poster">
+        </div>
+
+        <div class="mid-1-cont">
+            <h1>
+                Make Computer Science Fun!
+            </h1>
+            <p>
+                Learn from the Industry Expert and get the best job.
+            </p>
+
+        </div>
+
+        <button type="submit" class="btn-3"><a href="#">Register for the course</a></button>
+
+        <div class="image-2">
+            <img src="image/foot.PNG" alt="PlayStore">
+        </div>
+
+    </section>
+
+</body>
 </html>
